--- a/src/style/base/_settings.scss
+++ b/src/style/base/_settings.scss
@@ -4,15 +4,18 @@ $m-size: 1.6rem;
 $mx-size: 2.0rem;
 $l-size: 3.2rem;
 $xl-size: 4.6rem;
+$xxl-size: 8.5rem;
 $desktop-breakpoint: 48rem;
 //font-size
 $font-size-large: 1.8rem;
 $font-size-medium: 1.4rem;
 $font-size-small: 1.2rem;
+$font-size-xsmall: 0.9rem;
 //color
 $blue: #1c88bf;
 $red: rgb(184, 57, 57);
 $dark-grey: #333;
+$dark-black:#212529;
 $dark-blue: #364051;
 $off-white: #f7f7f7;
 $grey: #666;
