--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -7,3 +7,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: $m-size;
 }
+.profile_image{
+    width: 40px;
+    height: 40px;
+}
