--- a/src/style/base/_settings.scss
+++ b/src/style/base/_settings.scss
@@ -7,6 +7,8 @@ $xl-size: 4.6rem;
 $xxl-size: 8.5rem;
 $desktop-breakpoint: 48rem;
 //font-size
+$font-size-title: 4.0rem;
+$font-size-xlarge: 2.4rem;
 $font-size-large: 1.8rem;
 $font-size-medium: 1.4rem;
 $font-size-small: 1.2rem;
