--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -12,4 +12,5 @@
 @import './components/list';
 @import './components/navbar';
 @import './components/jumbotron';
-@import './components/table';
+@import './components/card';
+@import './components/home';
