--- a/src/style/components/_home.scss
+++ b/src/style/components/_home.scss
@@ -5,15 +5,45 @@
     font-size: $font-size-title;
     font-weight: 700;
     letter-spacing: 2px;
+    @media (max-width: $desktop-breakpoint) {
+        font-size: $font-size-large;
+      }
 }
 .home-poster-women{
     width: 100%;
-    height: 90vh;
-    background-image: url('/asset/women-images/w-image-1.jpg');
-    background-size: contain;
+    height: 60vh;
+    background-image: url('/asset/women-images/w-image-5.jpg');
+    background-size: cover;
     background-repeat: no-repeat;
     @media (min-width: $desktop-breakpoint) {
         background-image: url('/asset/women-images/w-image-6.jpg');
         background-size: cover;
+        height: 90vh;
+       
       }
+      .content{
+          padding: 100px 50px;
+          font-size: $font-size-title;
+          @media (max-width: $desktop-breakpoint) {
+            padding-top: 100%;
+            font-size: $font-size-xlarge;
+           
+          }
+      }
+}
+.home-poster-men{
+    @extend .home-poster-women;
+    background-image: url('/asset/men-images/m-image-2.jpg');
+    @media (min-width: $desktop-breakpoint) {
+        background-image: url('/asset/men-images/m-image-1.jpg');
+    }
+}
+.unlink{
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+    &:focus, &:hover, &:visited, &:link, &:active{
+        text-decoration: none;
+        color: black;
+    }
 }
