--- a/src/style/components/_inputs.scss
+++ b/src/style/components/_inputs.scss
@@ -2,6 +2,7 @@
 
 .text-input{
     border: solid 1px #cacccd;
+    border-radius: none;
     height: 50px;
     padding: $s-size;
     margin-right:$xs-size;
