--- a/src/style/components/_page-header.scss
+++ b/src/style/components/_page-header.scss
@@ -10,8 +10,11 @@
     }
 }
 .page-header-title{
-    font-size: $m-size;
+    margin: 40rem 0;
+    font-size: $mx-size;
+    font-weight: 700;
     text-decoration: none;
+    letter-spacing: $xxs-size;
     @media (min-width: $desktop-breakpoint){
         font-size: $l-size;
     }
