--- a/src/style/components/_home.scss
+++ b/src/style/components/_home.scss
@@ -12,7 +12,7 @@
 .home-poster-women{
     width: 100%;
     height: 80vh;
-    background-image: url('/asset/women-images/w-image-5.jpg');
+    background-image: url('/asset/women-images/w-image-0.jpg');
     background-size: cover;
     background-position: center;
     @media (min-width: $desktop-breakpoint) {
@@ -22,8 +22,10 @@
        
       }
       .content{
-          padding: 100px 50px;
-          font-size: $font-size-title;
+        margin: auto;
+        font-weight: 600;
+        text-align: center;
+        font-size: $font-size-title;
           @media (max-width: $desktop-breakpoint) {
             font-size: $font-size-xlarge;
           }
@@ -33,10 +35,11 @@
     margin: auto;
     text-align: center;
     .message{
+        font-weight: 600;
         font-size: $font-size-title;
         color: black;
         @media (max-width: $desktop-breakpoint) {
-            font-size: $font-size-large;
+            font-size: $font-size-xlarge;
           }
        
     }
@@ -49,12 +52,22 @@
     }
 }
 .unlink{
+    font-family: 'Gochi Hand', cursive;
     color: black;
     text-decoration: none;
     cursor: pointer;
     &:focus, &:hover, &:visited, &:link, &:active{
         text-decoration: none;
         color: black;
+    }
+}
+.unlink-text {
+    color: $off-white;
+    text-decoration: none;
+    cursor: pointer;
+    &:hover{
+        text-decoration: none;
+        color: $grey;
     }
 }
 .product-display{
