--- a/src/style/components/_navbar.scss
+++ b/src/style/components/_navbar.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: row;
   height: auto;
+  padding: $s-size;
   .navbar_brand {
     @media (max-width: $desktop-breakpoint) {
       order: 2;
@@ -30,12 +31,12 @@
 }
 .profile_name{
   color: $off-white;
-  font-size: $font-size-xxlarge;
+  font-size: $font-size-title;
   letter-spacing: $xxs-size;
-  font-family: 'Gochi Hand', cursive;
-}
-.unlink{
-  text-decoration: none;
+  font-family: $fancy-font;
+  @media (max-width: $desktop-breakpoint - 0.01rem ) {
+    font-size: $font-size-xlarge;
+  }
 }
 .navbar-collapse{
   background-color: #212529;
