--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -15,3 +15,6 @@
 @import './components/card';
 @import './components/home';
 @import './components/footer';
+@import './components/shop';
+@import './components/product';
+@import './components/cart';
