--- a/src/style/components/_form.scss
+++ b/src/style/components/_form.scss
@@ -11,3 +11,10 @@
     font-style: italic;
     margin: 0 0 $m-size 0;
 }
+.search-form{
+    width:75%;
+    height: 40px;
+}
+.search-wrapper{
+    min-height: 60vh;
+}
