--- a/src/style/components/_navbar.scss
+++ b/src/style/components/_navbar.scss
@@ -3,12 +3,13 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  height: auto;
-  padding: $s-size;
+  height: 120px;
+  @media (max-width: $desktop-breakpoint) {
+    height: 70px;
+ }
   .navbar_brand {
     @media (max-width: $desktop-breakpoint) {
       order: 2;
-  
    }
   }
   .account-dropdown{
@@ -104,4 +105,38 @@
   border: 1px solid orangered;
   color: orangered;
   border-radius: 100%;
+}
+
+//modal
+.modal-dialog {
+  text-align: center;
+  position: absolute;
+  min-width: 100%;
+  @media (min-width: $desktop-breakpoint) {
+    right: 0;
+    top: 0;
+    min-width: 30%;
+}
+}
+.modal-header{
+  background-color: black;
+  color: $off-white;
+  .modal-title{
+    margin:auto;
+    font-weight: 500;
+    font-size: $font-size-medium;
+    @media (max-width: $desktop-breakpoint) {
+      font-size: $font-size-small;
+  }
+  }
+}
+.modal-content {
+  @extend .modal-dialog;
+}
+.modal-body{
+  max-height: 90vh;
+  overflow-y: scroll;
+}
+.modal-body::-webkit-scrollbar {
+  display: none;
 }
