--- a/src/style/components/_cart.scss
+++ b/src/style/components/_cart.scss
@@ -1,8 +1,70 @@
+.modal{
+    overflow: hidden;
+}
 .card-item-shower{
-    max-height: 60vh;
+    max-height: 50vh;
     overflow-y: scroll;
     overflow-x:hidden; 
+    padding: $m-size;
 }
+.item-list{
+    background-color: #f1f1f1;
+    height: 40vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+    @media (max-width: 768px) {
+        height:auto;
+    }
+}
+.cart-wrapper{
+    overflow: hidden;
+    height: auto;
+    @media (max-width: 768px) {
+        height:auto;
+    }
+}
+
+.checkout-wrapper{
+    font-size: $xs-size;
+    margin: auto;
+    width: 90%;
+    height:auto;
+    margin-bottom: 15rem;
+    @media (max-width: 768px) {
+        width: 95%;
+        height: auto;
+    }
+}
+.carousel {
+    text-align: center;
+    background-color: goldenrod;
+    color: white;
+    height: 7rem;
+    font-weight: 100;
+    letter-spacing: 1px;
+    span{
+        font-size: $font-size-medium; 
+        @media (max-width: 768px) {
+            font-size: $font-size-xsmall; 
+        }
+    }
+}
+/* width */
 .card-item-shower::-webkit-scrollbar {
-    display: none;
-}
+    width: 20px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  .card-item-shower::-webkit-scrollbar-thumb {
+    background: black; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
