--- a/src/style/components/_cart.scss
+++ b/src/style/components/_cart.scss
@@ -49,22 +49,22 @@
         }
     }
 }
-/* width */
-.card-item-shower::-webkit-scrollbar {
-    width: 20px;
-  }
+// /* width */
+// .card-item-shower::-webkit-scrollbar {
+//     width: 20px;
+//   }
   
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1; 
-  }
+//   /* Track */
+//   ::-webkit-scrollbar-track {
+//     background: #f1f1f1; 
+//   }
    
-  /* Handle */
-  .card-item-shower::-webkit-scrollbar-thumb {
-    background: black; 
-  }
+//   /* Handle */
+//   .card-item-shower::-webkit-scrollbar-thumb {
+//     background: black; 
+//   }
   
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
-  }
+//   /* Handle on hover */
+//   ::-webkit-scrollbar-thumb:hover {
+//     background: #555; 
+//   }
