--- a/src/style/components/_home.scss
+++ b/src/style/components/_home.scss
@@ -1,7 +1,7 @@
 .home-wrapper{
     width: 97%;
     margin:auto;
-    img{
+    .image-home{
         @media (max-width: $desktop-breakpoint) {
             height: 20vh;
           }
