--- a/src/style/components/_button.scss
+++ b/src/style/components/_button.scss
@@ -10,7 +10,7 @@
     font-weight: 300;
     display: inline-block;
     text-decoration: none;
-    font-size: $font-size-medium;
+    font-size: $font-size-large;
     @media (max-width: $desktop-breakpoint){
         font-size: $font-size-small;
         padding: $s-size;
@@ -40,6 +40,10 @@
 .button-white{
     background-color: $off-white;
     color: $dark-black;
+    @media (max-width: $desktop-breakpoint){
+        font-size: $font-size-medium;
+        padding: $xxs-size;
+    }
 }
 .button-circle
 {
