--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -1,17 +1,15 @@
 @import './base/base';
 @import './base/settings';
-@import './components/header';
+@import './components/wrapper';
 @import './components/login';
-@import './components/content-container';
 @import './components/page-header';
 @import './components/button';
-@import './components/input-group';
 @import './components/inputs';
 @import './components/form';
 @import './components/visibility';
 @import './components/list';
 @import './components/navbar';
-@import './components/jumbotron';
+@import './components/carousel';
 @import './components/card';
 @import './components/home';
 @import './components/footer';
