--- a/src/style/base/_settings.scss
+++ b/src/style/base/_settings.scss
@@ -4,11 +4,13 @@ $s-size: 1.2rem;
 $xs-size: 1.4rem;
 $m-size: 1.6rem;
 $mx-size: 2.0rem;
+$mxx-size: 2.5rem;
 $l-size: 3.2rem;
 $xl-size: 4.6rem;
 $xxl-size: 8.5rem;
 $desktop-breakpoint: 76.8rem;
 //font-size
+$font-size-xtitle: 5.0rem;
 $font-size-title: 4.0rem;
 $font-size-xxlarge: 3.0rem;
 $font-size-xlarge: 2.4rem;
@@ -23,7 +25,7 @@ $red: rgb(184, 57, 57);
 $dark-grey: #333;
 $dark-black:#212529;
 $dark-blue: #364051;
-$off-white: #f7f7f7;
+$off-white: white;
 $grey: #666;
 //Font-family
 $fancy-font: 'Gochi Hand', cursive;
