--- a/src/style/components/_navbar.scss
+++ b/src/style/components/_navbar.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: row;
   height: 120px;
+  border-bottom: 0.5px solid rgb(189, 186, 186);
   @media (max-width: $desktop-breakpoint) {
     height: 70px;
  }
@@ -72,13 +73,13 @@
   color: $grey;
   font-size: $m-size;
   letter-spacing: $xxs-size;
+  margin: $l-size;
   text-decoration: none;
   @media (min-width: $desktop-breakpoint) {
     font-size: $mx-size;
     &:hover {
       text-decoration: none;
-      color: $off-white;
-      border-bottom: $off-white solid 0.5px;
+      border-bottom: $dark-black solid 0.5px;
     }
   }
   &:hover {
@@ -106,16 +107,17 @@
 }
 .fa-bars,.fa-search{
   font-size: $l-size;
-  color: $dark-blue;
+  color: $dark-black;
 }
 .fa-search:hover{
   color: white;
 }
 .cart-badge{
-  padding: 3px;
+  padding: 5px;
   border: 1px solid orangered;
   color: orangered;
   border-radius: 100%;
+  font-size: $xs-size;
 }
 
 //modal
