Revert "NEW UPDATE"
This reverts commit a5f2e5f73a7fa99c880f0252df9d7881e3d36571.

--- a/src/style/components/_wrapper.scss
+++ b/src/style/components/_wrapper.scss
@@ -95,7 +95,7 @@
 }
 .Signup-wrapper{
   width: 60%;
-  height: auto;
+  height: 100vh;
   @media (max-width: $desktop-breakpoint) {
     width: 100%;
     padding: $s-size;
